# ai-resume-critiquer

./: .env  README.md  main.py  pyproject.toml
